--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/sbuijs/react-chartJS-experiment",
+  "homepage": "https://sbuijs.github.io/",
   "name": "react-charts-experiment",
   "version": "0.1.0",
   "private": true,
